# otpauth-migration-decoder

./: .editorconfig  .envrc.example  .gitignore  Pipfile  README.md  decoder.py  otpauth_enums.py  otpauth_migration_pb2.py  pyproject.toml  setup.cfg  tox.ini
src/: decoder.py  otpauth_migration_pb2.py  otpauth_migration_pb2.pyi
src/protobuf/: otpauth-migration.proto  otpauth_migration_pb2.py
tests/: test_decode_secret.py  test_decoded_data.py  test_get_otpauth_url.py  test_get_url_params.py  test_validate_migration.py
